# k230_rtsmart_examples

./: .gitignore  Kconfig  Makefile  mkenv.mk
ai/face_detection/: CMakeLists.txt  Makefile  build_app.sh
ai/face_recognition/: CMakeLists.txt  Makefile  README.md  build_app.sh
ai_poc/: CMakeLists.txt  Makefile  build_app.sh  build_app_rtos_only.sh  build_app_sub_rtos_only.sh  version
ai_poc/anomaly_det/: CMakeLists.txt  main.cc
ai_poc/bytetrack/: BYTETracker.cc  CMakeLists.txt  README.md  main.cc  person_detect.h
ai_poc/common_files/: ai_utils.cc  setting.h  video_pipeline.cc
ai_poc/crosswalk_detect/: CMakeLists.txt  README.md  crosswalk_detect.cc  crosswalk_detect.h  main.cc
ai_poc/demo_mix/: CMakeLists.txt  README.md  main.cc
ai_poc/distraction_reminder/: CMakeLists.txt  README.md  face_detection.h  face_pose.cc  main.cc
ai_poc/dms_system/: CMakeLists.txt  hand_detection.cc  hand_detection.h  main.cc
ai_poc/dynamic_gesture/: CMakeLists.txt  dynamic_gesture.cc  dynamic_gesture.h  hand_detection.cc  hand_keypoint.h  main.cc
ai_poc/eye_gaze/: CMakeLists.txt  README.md  eye_gaze.h  main.cc
ai_poc/face_alignment/: CMakeLists.txt  README.md  face_alignment.cc  face_alignment.h  face_alignment_post.cc  main.cc  rasterize.cc
ai_poc/face_detection/: CMakeLists.txt  README.md  face_detection.cc  main.cc
ai_poc/face_emotion/: CMakeLists.txt  README.md  main.cc
ai_poc/face_gender/: CMakeLists.txt  README.md  face_gender.cc  main.cc
ai_poc/face_glasses/: CMakeLists.txt  README.md  face_glasses.cc  main.cc
ai_poc/face_landmark/: CMakeLists.txt  face_dense_landmark.cc  main.cc
ai_poc/face_mask/: CMakeLists.txt  face_mask.cc  main.cc
ai_poc/face_mesh/: CMakeLists.txt  face_detection.cc  face_mesh.cc  face_mesh_post.h  main.cc
ai_poc/face_parse/: CMakeLists.txt  README.md  face_parse.h  main.cc
ai_poc/face_pose/: CMakeLists.txt  face_pose.h  main.cc
ai_poc/face_verification/: CMakeLists.txt  README.md  main.cc
ai_poc/falldown_detect/: CMakeLists.txt  README.md  main.cc
ai_poc/finger_guessing/: CMakeLists.txt  README.md  hand_keypoint.cc  main.cc
ai_poc/fitness/: CMakeLists.txt  README.md  main.cc  pose_detect.cc
ai_poc/head_detection/: CMakeLists.txt  head_detection.cc  head_detection.h  main.cc
ai_poc/helmet_detect/: CMakeLists.txt  README.md  main.cc
ai_poc/kws/: CMakeLists.txt
ai_poc/licence_det/: CMakeLists.txt  README.md  main.cc
ai_poc/licence_det_rec/: CMakeLists.txt  README.md  licence_det.cc  licence_det.h  licence_reco.cc  main.cc  paint_text.cc
ai_poc/nanotracker/: CMakeLists.txt  README.md  main.cc  nanotrack_src.cc  nanotrack_src.h  nanotrack_tracker.cc  nanotrack_tracker.h
ai_poc/object_detect_yolov8n/: CMakeLists.txt  README.md  main.cc
ai_poc/ocr/: CMakeLists.txt  README.md  main.cc  ocr_box.h  paint_text.cc
ai_poc/person_attr/: CMakeLists.txt  README.md  main.cc  pulc.cc  pulc.h
ai_poc/person_detect/: CMakeLists.txt  README.md  main.cc  person_detect.cc
ai_poc/person_distance/: CMakeLists.txt  README.md  main.cc  person_detect.cc
ai_poc/pose_detect/: CMakeLists.txt  main.cc
ai_poc/pphumanseg/: CMakeLists.txt  README.md  main.cc  pphumanseg.h
ai_poc/puzzle_game/: CMakeLists.txt  README.md  main.cc  sliding_puzzle.cc
ai_poc/segment_yolov8n/: CMakeLists.txt  main.cc
ai_poc/self_learning/: CMakeLists.txt  README.md  main.cc  self_learning.cc  self_learning.h
ai_poc/shell/: nanotracker_isp.sh
ai_poc/smoke_detect/: CMakeLists.txt  README.md  main.cc  smoke_detect.cc  smoke_detect.h
ai_poc/space_resize/: CMakeLists.txt  README.md  main.cc  space_resize.cc
ai_poc/sq_hand_det/: CMakeLists.txt  README.md  hand_detection.h  main.cc
ai_poc/sq_handkp_class/: CMakeLists.txt  hand_keypoint.cc  main.cc
ai_poc/sq_handkp_det/: CMakeLists.txt  README.md  main.cc
ai_poc/sq_handkp_flower/: CMakeLists.txt  flower_recognition.h  hand_keypoint.cc  main.cc
ai_poc/sq_handkp_ocr/: CMakeLists.txt  README.md  hand_keypoint.h  main.cc  ocr_box.cc  ocr_box.h
ai_poc/sq_handreco/: CMakeLists.txt  README.md  hand_recognition.cc  hand_recognition.h  main.cc
ai_poc/traffic_light_detect/: CMakeLists.txt  main.cc
ai_poc/translate_en_ch/: CMakeLists.txt  README.md
ai_poc/vehicle_attr/: CMakeLists.txt  main.cc  pulc.cc  pulc.h
ai_poc/vi_vo/: vi_vo.h
ai_poc/virtual_keyboard/: CMakeLists.txt  README.md  hand_keypoint.h  key.cc  keyboard.cc  main.cc
ai_poc/yolop_lane_seg/: CMakeLists.txt  main.cc  yolop_lane_seg.cc  yolop_lane_seg.h
cloudplat_deploy_code/: CMakeLists.txt  README.md  build.sh
cloudplat_deploy_code/classification/: CMakeLists.txt  classification.h  main.cc
cloudplat_deploy_code/common_files/: ai_base.cc  ai_base.h  ai_utils.cc  parse_args.cc  scoped_timing.h  text_paint.cc  text_paint.h  video_pipeline.cc  video_pipeline.h
cloudplat_deploy_code/detection/: CMakeLists.txt  anchorfree_det.cc  anchorfree_det.h  gfl_det.h  main.cc
cloudplat_deploy_code/metric_learning/: CMakeLists.txt  main.cc
cloudplat_deploy_code/multilabel_cls/: CMakeLists.txt  main.cc  multilabel_cls.h
cloudplat_deploy_code/ocr/: CMakeLists.txt  main.cc  ocr_box.cc
cloudplat_deploy_code/ocr_detection/: CMakeLists.txt  main.cc  ocr_box.cc  ocr_box.h
cloudplat_deploy_code/ocr_recognition/: CMakeLists.txt  main.cc  ocr_reco.h
cloudplat_deploy_code/segmentation/: CMakeLists.txt  main.cc  segmentation.cc  segmentation.h
openblas_examples/: CMakeLists.txt  Makefile  build_app.sh
openblas_examples/openblas_cblas_saxpy/: CMakeLists.txt  openblas_cblas_saxpy.cpp
openblas_examples/openblas_cblas_sgemm/: openblas_cblas_sgemm.cpp
opencv_examples/opencv_obj_detect/: CMakeLists.txt  opencv_obj_detect.cpp
peripheral/: CMakeLists.txt  Kconfig  Makefile
peripheral/fft/: Makefile  test_fft.c
peripheral/fs_speedtest/: Makefile  main.c
peripheral/gpio/: test_gpio.c
peripheral/gzip_decomp/: test_gzip_decomp.c
peripheral/i2c/: CMakeLists.txt  i2c_main.c  i2c_slave.c
peripheral/ota/: test_ota.c
peripheral/otp_provision/: Makefile  otp_provision.c  (+1 more)
usage_ai2d/: CMakeLists.txt  Makefile  build_app.sh
(+553 files in other folders)
